--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EntryActivity">
+        <activity android:name=".CarInfoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SHOW_APP_INFO" />
 
